--- a/collecor/src/main/resources/templates/favoritos.html
+++ b/collecor/src/main/resources/templates/favoritos.html
@@ -80,13 +80,20 @@
               <div class="card">
                 <a th:href="${l.contentPath}" target="_blank"><img th:src="${l.imagePath}" class="card-img-top" style="height: 290px; width: 100%;" alt="..."></a>
                 <form method="post" th:action= "@{/fv/favorite/} +${#authentication.getName()} + '/' + ${l.id}">
-                  <button type="submit" class="position-absolute top-0 end-0">
+                  <button type="submit" class="position-absolute top-0 end-0 border-0 m-1" style="background-color: transparent;">
                     <img src="imgs/favoritos/delete.png" id="deleteIcon" alt="">
                   </button>
                 </form>
                 <div class="card-body">
                   <p class="card-title" th:text="${l.name}" style="font-size: larger; font-weight: 500;"></p>
-                  <p class="card-text" th:text="${l.description}" data-ls-module="charCounter"></p>
+                  <a class="btn text-white" style="background-color: blueviolet; width: 100%;" data-bs-toggle="collapse" href="#description" role="button" aria-expanded="false" aria-controls="collapseExample" onclick="hideDescription()" id="btDesc">
+                    Exibir Descrição
+                  </a>
+                  <div class="collapse" id="description">
+                    <div class="card card-body">
+                      <p class="card-text" th:text="${l.description}" data-ls-module="charCounter"></p>
+                    </div>
+                  </div>
                   <a th:href="${l.contentPath}" class="btn mt-3 text-white" style="background-color: #4B18B0;" th:download="${l.name}">Baixar</a>
                 </div>
               </div>
