--- a/collecor/src/main/resources/templates/register.html
+++ b/collecor/src/main/resources/templates/register.html
@@ -44,7 +44,7 @@
                         placeholder="Usuario" required>
                     </div>
                     <div class="mb-3">
-                      <input type="text" class="form-control" name="email" placeholder="Email" pattern=".*@.*" required>
+                      <input type="text" class="form-control" name="email" placeholder="Email" pattern=".*@.*.*com.*" required>
                     </div>
                     <div class="mb-3">
                       <input type="password" class="form-control" name="password" placeholder="Senha" required>
