--- a/collecor/src/main/resources/templates/favoritos.html
+++ b/collecor/src/main/resources/templates/favoritos.html
@@ -25,8 +25,8 @@
         <div class="col-12">
           <img src="imgs/favoritos/logo.png" class="img-fluid rounded float-start"/>
         </div>
-        <div class="container col-12">
-          <form  method="GET" th:action="@{/searchFv2}" class="tabCont">
+        <div class="container col-11">
+          <form  method="GET" th:action="@{/search2}" class="tabCont">
             <div class="radioTabBar">
               <ul class="radioTabBar" >
                 <li class="radioTabBar">
