--- a/collecor/src/main/resources/templates/upload.html
+++ b/collecor/src/main/resources/templates/upload.html
@@ -18,8 +18,8 @@
     
     <div class="container-fluid d-flex justify-content-center my-4">
       <form  class="rounded-5 content p-5 col-12"method="post" action="/products/uploadArquivo" enctype="multipart/form-data" style="height: 88vh;">
-        <div class="alert alert-danger d-flex justify-content-center" th:if="${param.error}" id="loginF" role="alert">
-          Já existe um produto com esse nome
+        <div class="alert alert-danger d-flex justify-content-center" th:if="${param.error}" th:text="${param.error}" id="loginF" role="alert">
+          
         </div>
         <div class="row">
           <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
